fixed the issue of share order list button layout breaking in ipad.

--- a/aftermarket_ui/src/app/orderList/orderList.scss
+++ b/aftermarket_ui/src/app/orderList/orderList.scss
@@ -111,9 +111,7 @@
                 display: inline-block;
             }
             .addToCart {
-                width: 30%;
                 display: inline-block;
-                float: right;
                 padding-top: 7px;
                 margin-right: 20px;
                 margin-bottom: 10px;
